--- a/.config/i3/config
+++ b/.config/i3/config
@@ -103,7 +103,6 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
@@ -250,3 +249,8 @@ bar {
 }
 
 bindsym $mod+Shift+x exec --no-startup-id i3lock -i ~/Imagens/'Papéis de parede'/01.png
+
+bindsym $mod+p exec --no-startup-id xrandr --output HDMI-1-0 --auto --left-of eDP-1 --mode 1920x1080
+bindsym $modAlt+p exec --no-startup-id xrandr --auto 
+
+exec --no-startup-id /usr/libexec/gsd-xsettings
