--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set-option -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
