--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,8 +2,9 @@
 TERM = "xterm-256color"
 
 [window]
-padding = { x = 5, y = 5 }
+padding = { x = 5, y = 0 }
 opacity = 0.9
+decorations = "None"
 
 [font]
 normal = { family = "JetBrains Mono Nerd Font", style = "Regular" }
