--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -4,6 +4,8 @@
 #[┣─project❯](bold red) $directory$rust$git_branch$git_status$package$golang$terraform$docker_context$python$docker_context$nodejs
 #[╰─cmd────❯](bold green) 
 #"""
+add_newline = true
+
 [username]
 style_user = "green bold"
 style_root = "red bold"
